[gd_scene load_steps=17 format=1]

[ext_resource path="res://files/theme.tres" type="Theme" id=1]
[ext_resource path="res://files/scripts/ending.gd" type="Script" id=2]
[ext_resource path="res://files/backgrounds/town.png" type="Texture" id=3]
[ext_resource path="res://files/images/garthor.png" type="Texture" id=4]
[ext_resource path="res://files/buttons/1panelsmall.png" type="Texture" id=5]
[ext_resource path="res://Roundo-Medium.otf" type="DynamicFontData" id=6]
[ext_resource path="res://files/buttons/img-backG-popup.png" type="Texture" id=7]
[ext_resource path="res://files/images/alise/002.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]

resource/name = "blackout"
length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Panel 2:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=2]

resource/name = "fading"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="StyleBoxTexture" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 5 )
margin/left = 10.0
margin/right = 10.0
margin/top = 10.0
margin/bottom = 10.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="DynamicFont" id=4]

font/size = 17
extra_spacing/top = 1
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]

font/size = 26
extra_spacing/top = 1
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]

font/size = 26
extra_spacing/top = 1
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 6 )

[sub_resource type="DynamicFont" id=7]

font/size = 26
extra_spacing/top = 1
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 6 )

[sub_resource type="StyleBoxTexture" id=8]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 7 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[node name="ending" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 2.0
margin/top = 2.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 2 )

[node name="background" type="TextureFrame" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -2.0
margin/top = -2.0
margin/right = 0.0
margin/bottom = 0.0
texture = ExtResource( 3 )
modulate = Color( 0.589844, 0.589844, 0.589844, 1 )
expand = true
stretch_mode = 7

[node name="character" type="TextureFrame" parent="."]

anchor/left = 3
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -113.0
margin/top = 64.0
margin/right = -99.0
margin/bottom = 0.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/blackout = SubResource( 1 )
anims/fading = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="textpanel" type="Panel" parent="."]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 240.0
margin/top = 18.0
margin/right = -272.0
margin/bottom = 173.0
custom_styles/panel = SubResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="textpanel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 14.0
margin/top = 12.0
margin/right = 497.0
margin/bottom = 141.0
custom_fonts/normal_font = SubResource( 4 )
bbcode/enabled = true
bbcode/bbcode = "[color=yellow][center]Wimborn remained prosperous, continuing to influence its surroundings with you as The Orderâ€™s local Headmaster. [/center][/color]"
visible_characters = -1

[node name="TextureFrame" type="TextureFrame" parent="."]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -34.0
margin/top = -30.0
margin/right = -36.0
margin/bottom = -23.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 0

[node name="RichTextLabel" type="RichTextLabel" parent="TextureFrame"]

visibility/visible = false
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 343.0
margin/top = 253.5
margin/right = -361.0
margin/bottom = -255.5
custom_fonts/normal_font = SubResource( 5 )
bbcode/enabled = true
bbcode/bbcode = "[center]Strive for Power

Game design, code and writing: Maverik


Music: The Sixth Gate Music


Leading Artist: Warm Tail


Sex engine writing and coding: NK


Writing and proofreading helpers: Kalderza, Shvan, Xero, Dr. Nobody, Anti-No, NK[/center]"
visible_characters = -1

[node name="RichTextLabel1" type="RichTextLabel" parent="TextureFrame"]

visibility/visible = false
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 501.0
margin/top = 254.5
margin/right = -488.0
margin/bottom = 139.5
custom_fonts/normal_font = SubResource( 6 )
bbcode/enabled = true
bbcode/bbcode = "[center]Special thanks for Patreon supporters, and everyone who played or tested

Patrons:[/center]"
visible_characters = -1

[node name="VBoxContainer" type="VBoxContainer" parent="TextureFrame"]

visibility/visible = false
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 569.0
margin/top = 123.5
margin/right = -452.0
margin/bottom = 91.5
alignment = 0

[node name="HBoxContainer" type="Control" parent="TextureFrame/VBoxContainer"]

visibility/visible = false
rect/min_size = Vector2( 0, 32 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1021.0
margin/bottom = 32.0

[node name="Label1" type="Label" parent="TextureFrame/VBoxContainer/HBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 122.0
margin/top = 0.0
margin/right = 386.0
margin/bottom = 28.0
custom_fonts/font = SubResource( 7 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label2" type="Label" parent="TextureFrame/VBoxContainer/HBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 440.0
margin/top = 0.0
margin/right = 696.0
margin/bottom = 28.0
custom_fonts/font = SubResource( 7 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label3" type="Label" parent="TextureFrame/VBoxContainer/HBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 762.0
margin/top = 0.0
margin/right = 1016.0
margin/bottom = 28.0
custom_fonts/font = SubResource( 7 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="alise" type="TextureFrame" parent="TextureFrame"]

visibility/visible = false
anchor/left = 3
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 28.0
margin/top = 31.0
margin/right = 213.0
margin/bottom = 22.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="continue" type="Button" parent="TextureFrame/alise"]

anchor/top = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -223.0
margin/top = 44.0
margin/right = 57.0
margin/bottom = 5.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Continue Playing"
flat = false

[node name="leave" type="Button" parent="TextureFrame/alise"]

anchor/top = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -223.0
margin/top = -4.0
margin/right = 57.0
margin/bottom = -43.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Leave to Main Menu"
flat = false

[node name="RichTextLabel" type="RichTextLabel" parent="TextureFrame/alise"]

anchor/top = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -222.0
margin/top = 265.0
margin/right = 58.0
margin/bottom = 56.0
bbcode/enabled = true
bbcode/bbcode = "[color=yellow][center]Thank you for playing![/center] 

Although that part of story has been resolved, you can continue playing.

You can still explore unvisited areas and complete unfinished quests. 

We will do our best keep on adding and balance more content![/color]"
visible_characters = -1

[node name="Panel 2" type="Panel" parent="."]

visibility/visible = false
visibility/opacity = 0.0
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -50.0
margin/top = -41.0
margin/right = -63.0
margin/bottom = -52.0
custom_styles/panel = SubResource( 8 )

[connection signal="pressed" from="TextureFrame/alise/continue" to="." method="_on_continue_pressed"]

[connection signal="pressed" from="TextureFrame/alise/leave" to="." method="_on_leave_pressed"]


